fix nav layout problem on IE8

--- a/core/Errordite.Web/Assets/Css/errordite.scss
+++ b/core/Errordite.Web/Assets/Css/errordite.scss
@@ -1780,7 +1780,7 @@ nav {
       width: 100%;
       li.nav-item {
         float: left;
-        margin-left: 15px;
+        margin-left: 14px;
         position: relative;
         line-height: 48px;
 		&.system{
